--- a/manifest.plist
+++ b/manifest.plist
@@ -1,1 +1,44 @@
 
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+	<key>items</key>
+	<array>
+		<dict>
+			<key>assets</key>
+			<array>
+				<dict>
+					<key>kind</key>
+					<string>software-package</string>
+					<key>url</key>
+					<string>http://www1.vbcinst.com/appdown/ios/VBC.ipa</string>
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>display-image</string>
+					<key>url</key>
+					<string>http://www1.vbcinst.com/appdown/ios/VBC57.png</string>
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>full-size-image</string>
+					<key>url</key>
+					<string>http://www1.vbcinst.com/appdown/ios/VBC512.png</string>
+				</dict>
+			</array>
+			<key>metadata</key>
+			<dict>
+				<key>bundle-identifier</key>
+				<string>com.TimeTech.Farm</string>
+				<key>bundle-version</key>
+				<string>1.4</string>
+				<key>kind</key>
+				<string>software</string>
+				<key>title</key>
+				<string>VBC天使社区</string>
+			</dict>
+		</dict>
+	</array>
+</dict>
+</plist>
