--- a/manifest.plist
+++ b/manifest.plist
@@ -12,19 +12,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://www1.vbcinst.com/appdown/ios/VBC.ipa</string>
+					<string>http://www1.vbcinst.com/appshopdown/ios/SHOP.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>http://www1.vbcinst.com/appdown/ios/VBC57.png</string>
+					<string>http://www1.vbcinst.com/appshopdown/ios/SHOP57.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>http://www1.vbcinst.com/appdown/ios/VBC512.png</string>
+					<string>http://www1.vbcinst.com/appshopdown/ios/SHOP512.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
@@ -36,7 +36,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>VBC天使社区</string>
+				<string>骑士蜂商城</string>
 			</dict>
 		</dict>
 	</array>
